# port-scanner

./: .gitignore  LICENSE  README.md  pyproject.toml  test_scanner.py
port_scanner/: __init__.py  main.py
